--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Raisa Erlich</title>
   </head>
   <body class="body__background">
@@ -20,7 +21,7 @@
           <div class="div__prueba"></div>
         </div>
         <navbar class="navbar">
-          <ul>
+          <ul class="ul__navbar">
             <li><a href="#">Sobre mi</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">Formación</a></li>
@@ -32,32 +33,51 @@
       <main>
         <div class="div__presentacion">
           <div class="div__presentacion-texto">
-            <h1>Raisa Erlich</h1>
+            <h1>¡Hola, <br>
+              soy <span class=span__nombre>Raisa Erlich!</span></h1>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              odit tempora quaerat animi asperiores ut totam cupiditate ipsum
-              ducimus enim dolore optio dolorem, non consectetur molestiae
-              adipisci autem nemo deleniti.
+              Desarrolladora FrontEnd. 
+              Estudiante avanzanda de Licenciatura en Letras.
+              Inglés, francés y español.
             </p>
           </div>
         </div>
         <div class="div__sobremi">
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi odit
-            tempora quaerat animi asperiores ut totam cupiditate ipsum ducimus
-            enim dolore optio dolorem, non consectetur molestiae adipisci autem
-            nemo deleniti.
+            Nací en Argentina y en este momento vivo en Tucumán. 
+            Me interesan profundamente las nuevas tecnologías, los videojuegos y los lenguajes.
+            Soy estudiante avanzada de la Licenciatura en Letras en la Universidad Nacional de Tucumán. 
+            Desarrolladora FrontEnd con muchas ganas de seguir creciendo en el mundo de la programación. 
           </p>
         </div>
         <div class="div__skills">
           <h2>Skills</h2>
-          <div class="div__skills-logos"></div>
+          <ul class="ul__skills-lista">
+            <li class="li__item-skill" id="html">
+              <img class="img__skill" src="./img/html.png" alt="html">
+              <h3>HTML</h3>
+            </li>
+            <li class="li__item-skill" id="css">
+              <img class="img__skill" src="./img/css.png" alt="css">
+              <h3>CSS</h3>
+            </li>
+            <li class="li__item-skill" id="js">
+              <img class="img__skill" src="./img/js.png" alt="js">
+              <h3>JS</h3>
+            </li>
+            <li class="li__item-skill" id="react">
+            <img class="img__skill" src="./img/react.png" alt="react">
+            <h3>REACT JS</h3>
+            </li>
+          </ul>
         </div>
         <div class="div__formacion">
           <h2>Formacion</h2>
           <div class="div__skills-formacion"></div>
         </div>
-        <div class="div__proyectos"></div>
+        <div class="div__proyectos">
+          <h2>Proyectos</h2>
+        </div>
         <div class="div__contacto">
           <form class="div__contacto-form">
             <input type="email" placeholder="Email" />
