--- a/index.html
+++ b/index.html
@@ -1,108 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style/reset.css" />
-    <link rel="stylesheet" href="./style/style.css" />
-    <title>Raisa Erlich</title>
-  </head>
-  <body class="body__background">
-    <div class="div__contenido">
-      <header>
-        <div class="div__barra-nav">
-          <div class="div__botones-nav">
-            <div class="div__circle-red"></div>
-            <div class="div__circle-yellow"></div>
-            <div class="div__circle-green"></div>
-          </div>
-          <input class="input__fake" type="text" placeholder="🔒 www.raisaerlich.com" disabled>
-          <div class="div__prueba"></div>
-        </div>
-        <navbar class="navbar">
-          <ul class="ul__navbar">
-            <li><a href="#">Sobre mi</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Formación</a></li>
-            <li><a href="#">Proyectos</a></li>
-            <li><a href="#" id="contacto">Contacto</a></li>
-          </ul>
-        </navbar>
-      </header>
-      <main>
-        <div class="div__presentacion">
-          <div class="div__presentacion-texto">
-            <h1>¡Hola, <br>
-              soy <span class=span__nombre>Raisa Erlich!</span></h1>
-            <p>
-              Desarrolladora FrontEnd. 
-              Estudiante avanzanda de Licenciatura en Letras.
-              Inglés, francés y español.
-            </p>
-          </div>
-        </div>
-        <div class="div__sobremi">
-          <p>
-            Nací en Argentina y en este momento vivo en Tucumán. 
-            Me interesan profundamente las nuevas tecnologías, los videojuegos y los lenguajes.
-            Soy estudiante avanzada de la Licenciatura en Letras en la Universidad Nacional de Tucumán. 
-            Desarrolladora FrontEnd con muchas ganas de seguir creciendo en el mundo de la programación. 
-          </p>
-        </div>
-        <div class="div__skills">
-          <h2>Skills</h2>
-          <ul class="ul__skills-lista">
-            <li class="li__item-skill" id="html">
-              <img class="img__skill" src="./img/html.png" alt="html">
-              <h3>HTML</h3>
-            </li>
-            <li class="li__item-skill" id="css">
-              <img class="img__skill" src="./img/css.png" alt="css">
-              <h3>CSS</h3>
-            </li>
-            <li class="li__item-skill" id="js">
-              <img class="img__skill" src="./img/js.png" alt="js">
-              <h3>JS</h3>
-            </li>
-            <li class="li__item-skill" id="react">
-            <img class="img__skill" src="./img/react.png" alt="react">
-            <h3>REACT JS</h3>
-            </li>
-          </ul>
-        </div>
-        <div class="div__formacion">
-          <h2>Formacion</h2>
-          <div class="div__skills-formacion"></div>
-        </div>
-        <div class="div__proyectos">
-          <h2>Proyectos</h2>
-        </div>
-        <div class="div__contacto" id="draggable">
-          <div class="div__contacto-fakeheader" id="draggable-bar">
-            <div class="div__circle-red" id="close-form"></div>
-            <div class="div__circle-yellow"></div>
-            <div class="div__circle-green"></div>
-          </div>
-          <form class="div__contacto-form">
-            <input type="email" placeholder="Email" />
-            <input type="text" placeholder="Nombre" />
-            <input type="text" placeholder="Escriba su mensaje..." />
-            <button class="button__enviar">Enviar</button>
-          </form>
-        </div>
-      </main>
-      <footer>
-        <div class="footer__información">
-          <p>Raisa Erlich</p>
-          <p>Github: @raisitae</p>
-        </div>
-        <div class="footer__contacto"></div>
-      </footer>
-      <script type="text/javascript" src="./app/main.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./style/reset.css" />
+        <link rel="stylesheet" href="./style/style.css" />
+        <title>Raisa Erlich</title>
+    </head>
+    <body class="body__background">
+        <div class="div__contenido">
+            <header>
+                <div class="div__barra-nav">
+                    <div class="div__botones-nav">
+                        <div class="div__circle-red"></div>
+                        <div class="div__circle-yellow"></div>
+                        <div class="div__circle-green"></div>
+                    </div>
+                    <input class="input__fake" type="text" placeholder="🔒 www.raisaerlich.com" disabled>
+                    <div class="div__prueba"></div>
+                </div>
+                <navbar class="navbar">
+                    <ul class="ul__navbar">
+                        <li><a href="#">Sobre mi</a></li>
+                        <li><a href="#">Skills</a></li>
+                        <li><a href="#">Formación</a></li>
+                        <li><a href="#">Proyectos</a></li>
+                        <li><a href="#" id="contacto">Contacto</a></li>
+                    </ul>
+                </navbar>
+            </header>
+            <main>
+                <div class="div__presentacion">
+                    <div class="div__presentacion-texto">
+                        <h1>¡Hola, <br>
+                            soy <span class=span__nombre>Raisa Erlich!</span>
+                        </h1>
+                        <p>
+                            Desarrolladora FrontEnd. 
+                            Estudiante avanzanda de Licenciatura en Letras.
+                            Inglés, francés y español.
+                        </p>
+                    </div>
+                </div>
+                <div class="div__sobremi">
+                    <p>
+                        Nací en Argentina y en este momento vivo en Tucumán. 
+                        Me interesan profundamente las nuevas tecnologías, los videojuegos y los lenguajes.
+                        Soy estudiante avanzada de la Licenciatura en Letras en la Universidad Nacional de Tucumán. 
+                        Desarrolladora FrontEnd con muchas ganas de seguir creciendo en el mundo de la programación. 
+                    </p>
+                </div>
+                <div class="div__skills">
+                    <h2>Skills</h2>
+                    <ul class="ul__skills-lista">
+                        <li class="li__item-skill" id="html">
+                            <img class="img__skill" src="./img/html.png" alt="html">
+                            <h3>HTML</h3>
+                        </li>
+                        <li class="li__item-skill" id="css">
+                            <img class="img__skill" src="./img/css.png" alt="css">
+                            <h3>CSS</h3>
+                        </li>
+                        <li class="li__item-skill" id="js">
+                            <img class="img__skill" src="./img/js.png" alt="js">
+                            <h3>JS</h3>
+                        </li>
+                        <li class="li__item-skill" id="react">
+                            <img class="img__skill-cuadrado" src="./img/react.png" alt="react">
+                            <h3>REACT JS</h3>
+                        </li>
+                        <li class="li__item-skill" id="jquery">
+                            <img class="img__skill-cuadrado" src="./img/jquery.png" alt="jquery">
+                            <h3>JQUERY</h3>
+                        </li>
+                        <li class="li__item-skill" id="sass">
+                            <img class="img__skill-cuadrado" src="./img/sass.png" alt="sass">
+                            <h3>SASS</h3>
+                        <li class="li__item-skill" id="nodejs">
+                            <img class="img__skill-cuadrado" src="./img/nodejs.png" alt="nodejs">
+                            <h3>NODE JS</h3>
+                        <li class="li__item-skill" id="git">
+                            <img class="img__skill-cuadrado" src="./img/git.png" alt="git">
+                            <h3>GIT</h3>
+                        </li>
+                    </ul>
+                </div>
+                <div class="div__formacion">
+                    <h2>Formación</h2>
+                    <ul class="ul__formacion-lista">
+                        <li class="li__item-formacion">
+                            <img class="img__formacion" src="./img/Sarmiento.png" alt="escuela-sarmiento"></i>
+                            <h3>ESCUELA Y LICEO VOCACIONAL SARMIENTO</h3>
+                            <p>Bachillerato con intensificación en humanidades</p>
+                            <p>2010 - 2015</p>
+                        </li>
+                        <li class="li__item-formacion">
+                            <img class="img__formacion" src="./img/unt.png" alt="unt"></i>
+                            <h3>FACULTAD DE FILOSOFÍA Y LETRAS UNT</h3>
+                            <p>Estudiante avanzada Lic. en Letras (cursado finalizado / 90% finales)</p>
+                            <p>2016 - 2022</p>
+                        </li>
+                        <li class="li__item-formacion">
+                            <img class="img__formacion" src="./img/patagonica.png" alt="patagonica"></i>
+                            <h3>PATAGÓNICA ESCUELA GASTRONÓMICA</h3>
+                            <p>Cocinera profesional titulada</p>
+                            <p>2015 - 2017</p>
+                        </li>
+                        <li class="li__item-formacion">
+                            <img class="img__formacion" src="./img/coderhouse.png" alt="coderhouse"></i>
+                            <h3>CODER HOUSE</h3>
+                            <p>Cursos certificados en Javascript y React Js</p>
+                            <p>2021 - 2022</p>
+                        </li>
+                        <li class="li__item-formacion">
+                            <img class="img__formacion" src="./img/oracleone.png" alt="oracleone"></i>
+                            <h3>ORACLE ONE NEXT EDUCATION</h3>
+                            <p>Lógica de la programación, desarrollo front end y java</p>
+                            <p>En curso</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="div__proyectos">
+                    <h2>Proyectos</h2>
+                    <ul class="ul__proyecto-lista">
+                        <li class="li__item-proyecto" id="html">
+                            <img class="img__proyecto" src="./img/pomodoro.png" alt="timer-pomodoro"></i>
+                                    <h3>Temporizador pomodoro</h3>
+                                    <p>Proyecto final del curso Javascript</p>
+                                    <p>Html, Css y Javascript</p>
+                                    <div class="div__botonera-proyecto">
+                                        <button class="button__proyecto-demo">DEMO</button>
+                                        <button class="button__proyecto-repo">REPOSITORIO</button>
+                                    </div>
+                        </li>
+                        <li class="li__item-proyecto" id="html">
+                            <img class="img__proyecto" src="./img/portfolio.png" alt="portfolio-profesional"></i>
+                                    <h3>Este portfolio</h3>
+                                    <p>Portfolio personal</p>
+                                    <p>Html, Sass y Javascript</p>
+                                <div class="div__botonera-proyecto">
+                                    <button class="button__proyecto-demo">DEMO</button>
+                                    <button class="button__proyecto-repo">REPOSITORIO</button>
+                            </div>
+                        </li>
+                        <li class="li__item-proyecto" id="html">
+                            <img class="img__proyecto" src="./img/ecommerce.png" alt="ecommerce-react"></i>
+                                    <h3>Ecommerce</h3>
+                                    <p>Proyecto final del curso React js</p>
+                                    <p>Jsx y Css</p>
+                                <div class="div__botonera-proyecto">
+                                    <button class="button__proyecto-demo">DEMO</button>
+                                    <button class="button__proyecto-repo">REPOSITORIO</button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="div__contacto" id="draggable">
+                    <div class="div__contacto-fakeheader" id="draggable-bar">
+                        <div class="div__circle-red" id="close-form"></div>
+                        <div class="div__circle-yellow"></div>
+                        <div class="div__circle-green"></div>
+                    </div>
+                    <form class="div__contacto-form">
+                        <input type="email" placeholder="Email" />
+                        <input type="text" placeholder="Nombre" />
+                        <input type="text" placeholder="Escriba su mensaje..." />
+                        <button class="button__enviar">Enviar</button>
+                    </form>
+                </div>
+            </main>
+            <footer>
+                <div class="footer__texto">
+                    <p>
+                        Made with <i class="fa-solid fa-heart"></i> by Raisa Erlich
+                    </p>
+                </div>
+                <div class="div__footer-datos">
+                    <h4>Contacto</h4>
+                    <p>raisaerlich@gmail.com</p>
+                    <p>Argentina</p>
+                    <p>+54-3815-709905</p>
+                </div>
+                <div class="footer__iconos">
+                    <a href="https://www.linkedin.com/in/raisa-erlich-36671041//" target="_blank">
+                    <i class="fa-brands fa-linkedin fa-2x"></i>
+                    </a>
+                    <a href="https://github.com/Raisitae" target="_blank">
+                    <i class="fa-brands fa-github fa-2x"></i>
+                    </a>
+                </div>
+            </footer>
+            <script src="https://kit.fontawesome.com/e69822852a.js" crossorigin="anonymous"></script>
+            <script type="text/javascript" src="./app/main.js"></script>
     </body>
-  </div>
+    </div>
 </html>
